# AXSHARE

./: .env.example  .env.prod.example  .env.test  .gitignore  AXSHARE-UI-Specification.docx  README.md  docker-compose.prod.yml  docker-compose.yml  pytest.ini  riepilogo.md
backend/: .env.test  Dockerfile.prod  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2c6a2b92e26b_add_activity_log.py  51d61139ce5a_merge_heads.py  a1b2c3d4e5f6_enable_rls.py  add_trash_fields.py  b2c3d4e5f6a1_add_inherited_from_folder_id.py  b2c3d4e5f6a7_add_folder_key_encrypted.py  c3d4e5f6a7b8_file_versions_table.py  d4e5f6a7b8c9_add_file_metadata_tags.py  e5f6a7b8c9d0_add_search_indexes.py  f6a7b8c9d0e1_add_file_signatures.py  fac610d5a3f1_initial_schema.py  h8c9d0e1f2g3_add_share_links.py  i9d0e1f2g3h4_add_sync_events.py  j0e1f2g3h4i5_add_guest_sessions.py  k1f2g3h4i5j6_add_signing_key.py  l2g3h4i5j6k7_share_links_token_and_accesses.py  m3h4i5j6k7l8_guest_invite_and_redeem.py  merge_51d6_b2c3.py  n2o3p4q5r6s7_add_audit_log_centralized.py  o3p4q5r6s7t8_add_notifications.py  p4q5r6s7t8u9_gdpr_compliance.py  q5r6s7t8u9v0_file_versions_comment_content_hash.py  r7s8t9u0v1w2_user_storage_quota.py  s9t0u1v2w3x4_merge_heads.py  t0u1v2w3x4y5_add_folder_color.py  u1v2w3x4y5z6_share_link_block_delete_pin.py  x8y9z0a1b2c3_add_require_recipient_pin.py  y9z0a1b2c3d4_permissions_block_flags.py  z0a1b2c3d4e5_add_user_pin_hash.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/core/: __init__.py  audit_actions.py  celery_app.py  event_bus.py  exceptions.py  metrics.py  notification_types.py  rate_limits.py  redis_pubsub.py  security.py  vault.py
backend/app/crypto/: __init__.py  aes.py  ecdh.py  kdf.py  rsa.py  vault.py
backend/app/email/: __init__.py
backend/scripts/: check_user_keys.py  delete_user_by_email.py  update_display_name.py
backend/tests/: __init__.py  conftest.py  test_celery.py  test_email_service.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+391 files in other folders)
