[package]
name = "axshare-desktop"
version = "0.1.1"
description = "AXSHARE Desktop Client"
authors = ["AXSHARE Team"]
license = "UNLICENSED"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "axshare_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.5", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
keyring = "2"
log = "0.4"
env_logger = "0.11"
open = "5"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
rand_core = "0.6"
notify = "6"
async-trait = "0.1"
dav-server = { version = "0.5", features = ["warp-compat"] }
warp = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
xattr = "1"
dirs = "5"
rsa = { version = "0.9", features = ["sha2"] }
percent-encoding = "2"
bytes = "1"

[target.'cfg(target_os = "windows")'.dependencies]
# WinFsp bindings — TASK 7.4 quando disponibile
# dokan = "0.2"

[[test]]
name = "crypto_tests"
path = "tests/crypto_tests.rs"

[[test]]
name = "sync_tests"
path = "tests/sync_tests.rs"
